--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul  9 23:05:03 2018</p>
+         Last Run: Tue Jul 10 00:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 10, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -34,27 +34,27 @@
                         <td>20</td>
                         <td>20</td>
                         <td>7</td>
-                        <td>51</td>
+                        <td>52</td>
                         <td>1</td>
                         <td>19</td>
                         <td>NW</td>
-                        <td>55</td>
+                        <td>58</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>20</td>
-                        <td>20</td>
+                        <td>19</td>
+                        <td>19</td>
                         <td>24</td>
                         <td>51</td>
                         <td>0</td>
-                        <td>19</td>
+                        <td>21</td>
                         <td>NW</td>
-                        <td>65</td>
+                        <td>68</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>18</td>
                         <td>18</td>
                         <td>24</td>
@@ -62,7 +62,7 @@
                         <td>0</td>
                         <td>19</td>
                         <td>NW</td>
-                        <td>76</td>
+                        <td>80</td>
                      </tr>
                   </tbody>
                </table>
@@ -107,7 +107,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "20",
-                 "20",
+                 "19",
                  "18"
                ]
              },
@@ -118,7 +118,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "20",
-                 "20",
+                 "19",
                  "18"
                ]
              }
@@ -180,7 +180,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "51",
+                 "52",
                  "51",
                  "58"
                ]
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "55",
-                 "65",
-                 "76"
+                 "58",
+                 "68",
+                 "80"
                ]
              }
            ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul  9 23:05:03 2018</p>
+         Last Run: Tue Jul 10 00:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -234,11 +234,11 @@
                         <td>26</td>
                         <td>26</td>
                         <td>0</td>
-                        <td>31</td>
+                        <td>30</td>
                         <td>4</td>
                         <td>8</td>
                         <td>SSE</td>
-                        <td>31</td>
+                        <td>32</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
@@ -246,11 +246,11 @@
                         <td>26</td>
                         <td>26</td>
                         <td>0</td>
-                        <td>31</td>
+                        <td>30</td>
                         <td>2</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>26</td>
+                        <td>27</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -262,7 +262,7 @@
                         <td>1</td>
                         <td>11</td>
                         <td>SE</td>
-                        <td>20</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -286,7 +286,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>5</td>
+                        <td>4</td>
                      </tr>
                   </tbody>
                </table>
@@ -414,8 +414,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "31",
-                 "31",
+                 "30",
+                 "30",
                  "32",
                  "36",
                  "43"
@@ -426,11 +426,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "31",
-                 "26",
-                 "20",
+                 "32",
+                 "27",
+                 "19",
                  "10",
-                 "5"
+                 "4"
                ]
              }
            ]
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul  9 23:05:03 2018</p>
+         Last Run: Tue Jul 10 00:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -468,63 +468,63 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Rain</td>
+                        <td>Overcast</td>
                         <td>10</td>
                         <td>10</td>
-                        <td>62</td>
-                        <td>84</td>
+                        <td>24</td>
+                        <td>83</td>
                         <td>1</td>
                         <td>21</td>
-                        <td>N</td>
-                        <td>100</td>
+                        <td>NNW</td>
+                        <td>96</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Chance of Rain</td>
+                        <td>Overcast</td>
                         <td>11</td>
                         <td>11</td>
-                        <td>55</td>
-                        <td>78</td>
+                        <td>24</td>
+                        <td>76</td>
                         <td>2</td>
-                        <td>19</td>
-                        <td>N</td>
+                        <td>21</td>
+                        <td>NNW</td>
                         <td>96</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Chance of Rain</td>
-                        <td>11</td>
-                        <td>11</td>
-                        <td>51</td>
-                        <td>73</td>
+                        <td>Overcast</td>
+                        <td>12</td>
+                        <td>12</td>
+                        <td>22</td>
+                        <td>68</td>
                         <td>3</td>
-                        <td>18</td>
+                        <td>19</td>
                         <td>N</td>
-                        <td>95</td>
+                        <td>92</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Chance of Rain</td>
+                        <td>Mostly Cloudy</td>
                         <td>12</td>
                         <td>12</td>
-                        <td>45</td>
-                        <td>67</td>
-                        <td>3</td>
-                        <td>18</td>
-                        <td>N</td>
-                        <td>92</td>
+                        <td>23</td>
+                        <td>65</td>
+                        <td>5</td>
+                        <td>19</td>
+                        <td>NNW</td>
+                        <td>65</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Chance of Rain</td>
+                        <td>Mostly Cloudy</td>
                         <td>13</td>
                         <td>13</td>
-                        <td>41</td>
+                        <td>23</td>
                         <td>61</td>
-                        <td>3</td>
-                        <td>18</td>
+                        <td>6</td>
+                        <td>21</td>
                         <td>NNW</td>
-                        <td>92</td>
+                        <td>67</td>
                      </tr>
                   </tbody>
                </table>
@@ -572,7 +572,7 @@
                "data":[
                  "10",
                  "11",
-                 "11",
+                 "12",
                  "12",
                  "13"
                ]
@@ -585,7 +585,7 @@
                "data":[
                  "10",
                  "11",
-                 "11",
+                 "12",
                  "12",
                  "13"
                ]
@@ -640,11 +640,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "62",
-                 "55",
-                 "51",
-                 "45",
-                 "41"
+                 "24",
+                 "24",
+                 "22",
+                 "23",
+                 "23"
                ]
              },
              {
@@ -652,10 +652,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "84",
-                 "78",
-                 "73",
-                 "67",
+                 "83",
+                 "76",
+                 "68",
+                 "65",
                  "61"
                ]
              },
@@ -664,11 +664,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "100",
                  "96",
-                 "95",
+                 "96",
                  "92",
-                 "92"
+                 "65",
+                 "67"
                ]
              }
            ]
@@ -685,7 +685,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul  9 23:05:03 2018</p>
+         Last Run: Tue Jul 10 00:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -714,13 +714,13 @@
                         <td>1</td>
                         <td>16</td>
                         <td>NW</td>
-                        <td>51</td>
+                        <td>52</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
                         <td>Partly Cloudy</td>
-                        <td>15</td>
-                        <td>15</td>
+                        <td>14</td>
+                        <td>14</td>
                         <td>4</td>
                         <td>54</td>
                         <td>3</td>
@@ -745,24 +745,24 @@
                         <td>Partly Cloudy</td>
                         <td>15</td>
                         <td>15</td>
-                        <td>7</td>
+                        <td>8</td>
                         <td>47</td>
                         <td>5</td>
                         <td>18</td>
                         <td>W</td>
-                        <td>57</td>
+                        <td>58</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>6</td>
+                        <td>7</td>
                         <td>42</td>
                         <td>5</td>
                         <td>14</td>
-                        <td>WSW</td>
-                        <td>64</td>
+                        <td>W</td>
+                        <td>65</td>
                      </tr>
                   </tbody>
                </table>
@@ -809,7 +809,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "14",
-                 "15",
+                 "14",
                  "15",
                  "15",
                  "17"
@@ -822,7 +822,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "14",
-                 "15",
+                 "14",
                  "15",
                  "15",
                  "17"
@@ -881,8 +881,8 @@
                  "6",
                  "4",
                  "4",
-                 "7",
-                 "6"
+                 "8",
+                 "7"
                ]
              },
              {
@@ -902,11 +902,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "51",
+                 "52",
                  "53",
                  "55",
-                 "57",
-                 "64"
+                 "58",
+                 "65"
                ]
              }
            ]
