--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 01:05:03 2018</p>
+         Last Run: Tue Jul 10 02:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 10, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -34,35 +34,35 @@
                         <td>19</td>
                         <td>19</td>
                         <td>24</td>
-                        <td>53</td>
+                        <td>54</td>
                         <td>1</td>
                         <td>19</td>
                         <td>NW</td>
-                        <td>59</td>
+                        <td>58</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>35</td>
-                        <td>52</td>
+                        <td>34</td>
+                        <td>54</td>
                         <td>0</td>
                         <td>19</td>
                         <td>NW</td>
-                        <td>69</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>18</td>
                         <td>18</td>
-                        <td>33</td>
-                        <td>59</td>
+                        <td>32</td>
+                        <td>58</td>
                         <td>0</td>
-                        <td>19</td>
+                        <td>18</td>
                         <td>NW</td>
-                        <td>79</td>
+                        <td>72</td>
                      </tr>
                   </tbody>
                </table>
@@ -171,8 +171,8 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "24",
-                 "35",
-                 "33"
+                 "34",
+                 "32"
                ]
              },
              {
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "53",
-                 "52",
-                 "59"
+                 "54",
+                 "54",
+                 "58"
                ]
              },
              {
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "59",
-                 "69",
-                 "79"
+                 "58",
+                 "64",
+                 "72"
                ]
              }
            ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 01:05:03 2018</p>
+         Last Run: Tue Jul 10 02:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -230,7 +230,7 @@
                   <tbody>
                      <tr>
                         <td>05:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>26</td>
                         <td>26</td>
                         <td>0</td>
@@ -238,7 +238,7 @@
                         <td>4</td>
                         <td>8</td>
                         <td>SSE</td>
-                        <td>33</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
@@ -246,11 +246,11 @@
                         <td>26</td>
                         <td>26</td>
                         <td>0</td>
-                        <td>30</td>
+                        <td>29</td>
                         <td>2</td>
                         <td>10</td>
-                        <td>SSE</td>
-                        <td>27</td>
+                        <td>S</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -261,8 +261,8 @@
                         <td>32</td>
                         <td>1</td>
                         <td>11</td>
-                        <td>SE</td>
-                        <td>19</td>
+                        <td>SSE</td>
+                        <td>11</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -273,8 +273,8 @@
                         <td>35</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>SE</td>
-                        <td>10</td>
+                        <td>SSE</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -282,11 +282,11 @@
                         <td>22</td>
                         <td>22</td>
                         <td>1</td>
-                        <td>43</td>
+                        <td>42</td>
                         <td>0</td>
-                        <td>11</td>
-                        <td>ESE</td>
-                        <td>4</td>
+                        <td>10</td>
+                        <td>SE</td>
+                        <td>1</td>
                      </tr>
                   </tbody>
                </table>
@@ -415,10 +415,10 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "30",
-                 "30",
+                 "29",
                  "32",
                  "35",
-                 "43"
+                 "42"
                ]
              },
              {
@@ -426,11 +426,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "33",
-                 "27",
-                 "19",
-                 "10",
-                 "4"
+                 "15",
+                 "14",
+                 "11",
+                 "5",
+                 "1"
                ]
              }
            ]
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 01:05:03 2018</p>
+         Last Run: Tue Jul 10 02:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -471,60 +471,60 @@
                         <td>Chance of Rain</td>
                         <td>10</td>
                         <td>10</td>
-                        <td>31</td>
-                        <td>82</td>
+                        <td>33</td>
+                        <td>84</td>
                         <td>1</td>
                         <td>21</td>
                         <td>NNW</td>
-                        <td>97</td>
+                        <td>96</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Overcast</td>
+                        <td>Chance of Rain</td>
                         <td>11</td>
                         <td>11</td>
-                        <td>24</td>
-                        <td>76</td>
+                        <td>31</td>
+                        <td>80</td>
                         <td>2</td>
-                        <td>21</td>
+                        <td>19</td>
                         <td>NNW</td>
-                        <td>97</td>
+                        <td>95</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Overcast</td>
-                        <td>12</td>
-                        <td>12</td>
-                        <td>24</td>
-                        <td>68</td>
+                        <td>11</td>
+                        <td>11</td>
+                        <td>13</td>
+                        <td>72</td>
                         <td>3</td>
-                        <td>21</td>
+                        <td>19</td>
                         <td>NNW</td>
-                        <td>93</td>
+                        <td>91</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>12</td>
                         <td>12</td>
-                        <td>23</td>
-                        <td>65</td>
+                        <td>11</td>
+                        <td>69</td>
                         <td>5</td>
-                        <td>19</td>
+                        <td>18</td>
                         <td>NNW</td>
-                        <td>66</td>
+                        <td>65</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>13</td>
-                        <td>13</td>
-                        <td>22</td>
+                        <td>14</td>
+                        <td>14</td>
+                        <td>11</td>
                         <td>62</td>
                         <td>6</td>
-                        <td>19</td>
+                        <td>18</td>
                         <td>NNW</td>
-                        <td>68</td>
+                        <td>69</td>
                      </tr>
                   </tbody>
                </table>
@@ -572,9 +572,9 @@
                "data":[
                  "10",
                  "11",
+                 "11",
                  "12",
-                 "12",
-                 "13"
+                 "14"
                ]
              },
              {
@@ -585,9 +585,9 @@
                "data":[
                  "10",
                  "11",
+                 "11",
                  "12",
-                 "12",
-                 "13"
+                 "14"
                ]
              }
            ]
@@ -640,11 +640,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "33",
                  "31",
-                 "24",
-                 "24",
-                 "23",
-                 "22"
+                 "13",
+                 "11",
+                 "11"
                ]
              },
              {
@@ -652,10 +652,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "82",
-                 "76",
-                 "68",
-                 "65",
+                 "84",
+                 "80",
+                 "72",
+                 "69",
                  "62"
                ]
              },
@@ -664,11 +664,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "97",
-                 "97",
-                 "93",
-                 "66",
-                 "68"
+                 "96",
+                 "95",
+                 "91",
+                 "65",
+                 "69"
                ]
              }
            ]
@@ -685,7 +685,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 01:05:03 2018</p>
+         Last Run: Tue Jul 10 02:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -722,7 +722,7 @@
                         <td>15</td>
                         <td>15</td>
                         <td>1</td>
-                        <td>53</td>
+                        <td>52</td>
                         <td>3</td>
                         <td>19</td>
                         <td>WSW</td>
@@ -891,7 +891,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "60",
-                 "53",
+                 "52",
                  "47",
                  "41",
                  "38"
@@ -923,7 +923,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 01:05:03 2018</p>
+         Last Run: Tue Jul 10 02:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
